update readme and htmls

--- a/routes/index.html
+++ b/routes/index.html
@@ -3,7 +3,7 @@
         <title>Opto Server</title>
     </head>
     <body style="text-align: center;">
-        <h1>Hello, World!</h1>
+        <h1>Opto</h1>
         <p>by deadManAlive</p>
     </body>
 </html>
