--- a/routes/about.html
+++ b/routes/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
     </head>
     <body style="text-align: center;">
-        <h1>Opto</h1>
+        <h1>About</h1>
         <p>Static web server made only with C</p>
         <hr>
         <p>From greek adjective <i>ὀπτικός</i> which means "seen" or "visible"</p>
